--- a/index.html
+++ b/index.html
@@ -69,8 +69,16 @@ img {
 <ul>
 <li><a href="#today-in-the-morning"><span class="toc-section-number">1</span> Today in the morning</a></li>
 <li><a href="#todays-learning-objectives"><span class="toc-section-number">2</span> Today’s Learning objectives</a></li>
-<li><a href="#using-the-terminal-within-linux"><span class="toc-section-number">3</span> Using the terminal within Linux</a><ul>
-<li><a href="#open-the-terminal"><span class="toc-section-number">3.1</span> Open the terminal</a></li>
+<li><a href="#a-simple-intro-to-the-terminal"><span class="toc-section-number">3</span> A simple intro to the terminal</a><ul>
+<li><a href="#what-is-the-terminal"><span class="toc-section-number">3.1</span> What is the terminal</a><ul>
+<li><a href="#bash"><span class="toc-section-number">3.1.1</span> Bash?</a></li>
+<li><a href="#the-terminal-on-linux-mac-or-windows"><span class="toc-section-number">3.1.2</span> The terminal on Linux, Mac, or Windows</a></li>
+</ul></li>
+<li><a href="#getting-started-with-the-terminal"><span class="toc-section-number">3.2</span> Getting started with the terminal</a><ul>
+<li><a href="#command-cd-pwd-ls"><span class="toc-section-number">3.2.1</span> Command: cd, pwd, ls</a></li>
+<li><a href="#cp"><span class="toc-section-number">3.2.2</span> cp</a></li>
+<li><a href="#gdal"><span class="toc-section-number">3.2.3</span> GDAL</a></li>
+</ul></li>
 </ul></li>
 <li><a href="#r-and-rstudio-within-linux"><span class="toc-section-number">4</span> R and Rstudio within Linux</a></li>
 <li><a href="#python-within-linux"><span class="toc-section-number">5</span> Python within Linux</a><ul>
@@ -95,10 +103,153 @@ img {
 </ul></li>
 </ul>
 </div>
-<div id="using-the-terminal-within-linux" class="section level1">
-<h1><span class="header-section-number">3</span> Using the terminal within Linux</h1>
-<div id="open-the-terminal" class="section level2">
-<h2><span class="header-section-number">3.1</span> Open the terminal</h2>
+<div id="a-simple-intro-to-the-terminal" class="section level1">
+<h1><span class="header-section-number">3</span> A simple intro to the terminal</h1>
+<div id="what-is-the-terminal" class="section level2">
+<h2><span class="header-section-number">3.1</span> What is the terminal</h2>
+<div id="bash" class="section level3">
+<h3><span class="header-section-number">3.1.1</span> Bash?</h3>
+</div>
+<div id="the-terminal-on-linux-mac-or-windows" class="section level3">
+<h3><span class="header-section-number">3.1.2</span> The terminal on Linux, Mac, or Windows</h3>
+<p>Is not the “Terminator” but something really powerfull. The terminal is the engine behind linux and mac and can also be installed on Windows via a program called <code>Cygwin</code>.</p>
+<p><a href="https://stackoverflow.com/questions/8051145/is-the-terminal-in-mac-and-linux-the-same">Is the terminal in Mac and Linux the same</a></p>
+</div>
+</div>
+<div id="getting-started-with-the-terminal" class="section level2">
+<h2><span class="header-section-number">3.2</span> Getting started with the terminal</h2>
+<div id="command-cd-pwd-ls" class="section level3">
+<h3><span class="header-section-number">3.2.1</span> Command: cd, pwd, ls</h3>
+<pre class="bash"><code>cd</code></pre>
+<pre class="bash"><code>pwd</code></pre>
+<p>List files</p>
+<pre class="bash"><code>ls</code></pre>
+<pre><code>## Lesson9_Intro2Linux.Rproj
+## Slides.Rmd
+## Slides.html
+## data
+## figures
+## index.Rmd
+## index.html</code></pre>
+<pre class="bash"><code>ls -lht</code></pre>
+<pre><code>## total 1864
+## -rw-r--r--  1 verbe039  staff   4.1K Jan 12 22:38 index.Rmd
+## drwxr-xr-x  6 verbe039  staff   204B Jan 12 22:37 data
+## -rw-r--r--  1 verbe039  staff   747K Jan 12 22:37 index.html
+## drwxr-xr-x  3 verbe039  staff   102B Jan 12 21:42 figures
+## -rw-r--r--  1 verbe039  staff   115B Jan 12 12:33 Slides.Rmd
+## -rw-r--r--  1 verbe039  staff   166K Jan 12 12:33 Slides.html
+## -rw-r--r--  1 verbe039  staff   235B Jan  8 11:20 Lesson9_Intro2Linux.Rproj</code></pre>
+<p>How to use it:</p>
+<pre class="bash"><code>## Where am I?
+pwd
+ 
+## List the contents of the current directory
+ls
+ls -l
+ 
+# Change the current directory to Videos
+cd Videos
+pwd</code></pre>
+</div>
+<div id="cp" class="section level3">
+<h3><span class="header-section-number">3.2.2</span> cp</h3>
+</div>
+<div id="gdal" class="section level3">
+<h3><span class="header-section-number">3.2.3</span> GDAL</h3>
+<p><strong><em>Do you know who Frank Warmerdam is?</em></strong></p>
+<ul>
+<li>Check the the FWtools:
+<ul>
+<li><a href="http://fwtools.maptools.org/" class="uri">http://fwtools.maptools.org/</a></li>
+<li>FWTools is a set of Open Source GIS binaries for Windows (win32) and Linux (x86 32bit) systems produced</li>
+</ul></li>
+<li>He’s is the man behind GDAL and is now working at <a href="https://www.planet.com/">Planet Labs</a>.</li>
+</ul>
+<p>Now via the terminal we can acces GDAL directly!!! E.g. we can check out what the current version of GDAL is that is installed on our Linux OS:</p>
+<p>Let’s download a file from <a href="https://geoscripting-wur.github.io/IntroToRaster/#raster-objects-manipulations">Lesson 4 and Raster object manipulations</a>:</p>
+<p>Download the <code>gewata.zip</code> file from Github (<a href="https://github.com/GeoScripting-WUR/IntroToRaster/raw/gh-pages/data/gewata.zip">link</a>) and unzip in the data folder.</p>
+<pre class="bash"><code>echo &quot;the current GDAL version is:&quot;
+gdal-config --version</code></pre>
+<pre><code>## the current GDAL version is:
+## 1.11.1</code></pre>
+<p>Using gdalinfo:</p>
+<pre class="bash"><code>cd data
+ls *.tif</code></pre>
+<pre><code>## LE71700552001036SGS00_SR_Gewata_INT1U.tif
+## ndvi.tif</code></pre>
+<pre class="bash"><code>gdalinfo -nomd -norat -noct LE71700552001036SGS00_SR_Gewata_INT1U.tif</code></pre>
+<p>Now let’s calculate the NDVI via GDAL terminal</p>
+<pre class="bash"><code>cd data
+cp LE71700552001036SGS00_SR_Gewata_INT1U.tif input.tif
+echo &quot;* all files in the directory&quot;
+ls
+echo &quot;* now apply gdal_calc: Command line raster calculator with numpy syntax&quot;
+gdal_calc.py -A input.tif --A_band=4 -B input.tif --B_band=3  --outfile=ndvi.tif  --calc=&quot;(A.astype(float)-B)/(A.astype(float)+B)&quot; --type='Float32' --co=&quot;COMPRESS=LZW&quot;
+echo &quot;* remove the input temporary file&quot;
+rm input.tif</code></pre>
+<pre><code>## * all files in the directory
+## LE71700552001036SGS00_SR_Gewata_INT1U.tif
+## gewata.zip
+## input.tif
+## ndvi.tif
+## * now apply gdal_calc: Command line raster calculator with numpy syntax
+## 0 .. 10 .. 20 .. 30 .. 40 .. 50 .. 60 .. 70 .. 80 .. 90 .. 100 - Done
+## * remove the input temporary file</code></pre>
+<pre class="bash"><code>cd data
+echo &quot;* list all files&quot;
+ls -lht
+echo &quot;* histogram statistics&quot;
+gdalinfo -hist -stats ndvi.tif</code></pre>
+<pre><code>## * list all files
+## total 8432
+## -rw-r--r--  1 verbe039  staff   945K Jan 12 22:38 ndvi.tif
+## -rw-r-----@ 1 verbe039  staff   1.6M Jan 12 21:57 gewata.zip
+## -rwxr-xr-x@ 1 verbe039  staff   1.6M Jan  8 10:41 LE71700552001036SGS00_SR_Gewata_INT1U.tif
+## * histogram statistics
+## Driver: GTiff/GeoTIFF
+## Files: ndvi.tif
+## Size is 653, 593
+## Coordinate System is:
+## PROJCS[&quot;UTM Zone 36, Northern Hemisphere&quot;,
+##     GEOGCS[&quot;WGS 84&quot;,
+##         DATUM[&quot;unknown&quot;,
+##             SPHEROID[&quot;WGS84&quot;,6378137,298.257223563]],
+##         PRIMEM[&quot;Greenwich&quot;,0],
+##         UNIT[&quot;degree&quot;,0.0174532925199433]],
+##     PROJECTION[&quot;Transverse_Mercator&quot;],
+##     PARAMETER[&quot;latitude_of_origin&quot;,0],
+##     PARAMETER[&quot;central_meridian&quot;,33],
+##     PARAMETER[&quot;scale_factor&quot;,0.9996],
+##     PARAMETER[&quot;false_easting&quot;,500000],
+##     PARAMETER[&quot;false_northing&quot;,0],
+##     UNIT[&quot;metre&quot;,1,
+##         AUTHORITY[&quot;EPSG&quot;,&quot;9001&quot;]]]
+## Origin = (829455.000000000000000,843195.000000000000000)
+## Pixel Size = (30.000000000000000,-30.000000000000000)
+## Metadata:
+##   AREA_OR_POINT=Area
+## Image Structure Metadata:
+##   COMPRESSION=LZW
+##   INTERLEAVE=BAND
+## Corner Coordinates:
+## Upper Left  (  829455.000,  843195.000) ( 35d59' 8.17&quot;E,  7d37' 4.43&quot;N)
+## Lower Left  (  829455.000,  825405.000) ( 35d59' 4.21&quot;E,  7d27'25.90&quot;N)
+## Upper Right (  849045.000,  843195.000) ( 36d 9'46.63&quot;E,  7d36'59.90&quot;N)
+## Lower Right (  849045.000,  825405.000) ( 36d 9'42.43&quot;E,  7d27'21.46&quot;N)
+## Center      (  839250.000,  834300.000) ( 36d 4'25.36&quot;E,  7d32'12.96&quot;N)
+## Band 1 Block=653x3 Type=Float32, ColorInterp=Gray
+##   Minimum=0.157, Maximum=0.908, Mean=0.687, StdDev=0.136
+## 0...10...20...30...40...50...60...70...80...90...100 - done.
+##   256 buckets from 0.155153 to 0.909519:
+##   1 0 0 1 1 0 1 0 1 1 1 1 1 0 1 2 1 3 4 2 1 4 3 3 6 2 4 4 9 7 22 2 24 27 25 44 32 44 67 83 48 75 87 103 85 165 98 254 119 240 198 240 190 448 244 196 526 439 93 0 1257 0 119 726 544 290 390 731 514 470 604 667 545 584 566 612 607 935 508 706 520 698 708 1008 856 934 508 718 991 1034 608 1184 1302 291 862 1159 747 1043 1120 1199 1152 641 964 1333 765 1456 758 1251 1249 886 1207 1242 1614 235 2755 91 0 2782 69 2797 338 1735 1421 927 1380 1386 730 1735 1485 935 2231 893 1626 1546 1553 1485 1332 1080 948 1646 1013 1618 1152 1332 1283 1337 1046 1427 1206 1291 2310 0 1524 739 1605 1006 1759 1098 1445 786 1236 1570 1144 1097 1663 1303 1523 1022 979 1392 1737 1375 962 2372 267 2042 1855 1324 2093 1304 2278 1603 1837 2642 2452 1970 3262 1904 3528 4184 714 3980 3820 3482 5394 3008 5714 3932 4236 4385 6381 7122 532 7350 6907 5746 7439 4203 6629 5423 6466 7130 7818 7825 6345 6809 5419 8614 6644 5778 3907 5711 5766 4920 3944 6694 3637 3323 3378 2658 3948 2383 2020 2003 914 686 1076 808 820 473 388 213 218 94 126 62 43 28 19 7 9 2 1 0 0 1 
+##   NoData Value=1.175494351e-38
+##   Metadata:
+##     STATISTICS_MAXIMUM=0.90804594755173
+##     STATISTICS_MEAN=0.68650394638861
+##     STATISTICS_MINIMUM=0.15662650763988
+##     STATISTICS_STDDEV=0.13569862342957</code></pre>
+<p>More info here: <a href="http://www.gdal.org/gdalinfo.html" class="uri">http://www.gdal.org/gdalinfo.html</a></p>
 <p>See the following tutorial for Geeks! (Warning!: Now you are risking to become a Geek or even computer freak yourself)</p>
 <ul>
 <li><a href="http://www.howtogeek.com/140679/beginner-geek-how-to-start-using-the-linux-terminal/" class="uri">http://www.howtogeek.com/140679/beginner-geek-how-to-start-using-the-linux-terminal/</a></li>
@@ -110,6 +261,7 @@ img {
 <li><a href="http://computers.tutsplus.com/tutorials/navigating-the-terminal-a-gentle-introduction" class="uri">http://computers.tutsplus.com/tutorials/navigating-the-terminal-a-gentle-introduction</a>–mac-3855</li>
 <li><a href="http://blog.teamtreehouse.com/introduction-to-the-mac-os-x-command-line" class="uri">http://blog.teamtreehouse.com/introduction-to-the-mac-os-x-command-line</a></li>
 </ul>
+</div>
 </div>
 </div>
 <div id="r-and-rstudio-within-linux" class="section level1">
