--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@ img {
 <li><a href="#getting-started-with-the-terminal"><span class="toc-section-number">3.2</span> Getting started with the terminal</a><ul>
 <li><a href="#command-cd-pwd-ls"><span class="toc-section-number">3.2.1</span> Command: cd, pwd, ls</a></li>
 <li><a href="#cp"><span class="toc-section-number">3.2.2</span> cp</a></li>
-<li><a href="#gdal"><span class="toc-section-number">3.2.3</span> GDAL</a></li>
+<li><a href="#writing-a-shell-script"><span class="toc-section-number">3.2.3</span> writing a shell script?!</a></li>
+<li><a href="#gdal"><span class="toc-section-number">3.2.4</span> GDAL</a></li>
+<li><a href="#excercise"><span class="toc-section-number">3.2.5</span> Excercise</a></li>
 </ul></li>
 </ul></li>
 <li><a href="#r-and-rstudio-within-linux"><span class="toc-section-number">4</span> R and Rstudio within Linux</a></li>
@@ -125,17 +127,21 @@ img {
 <p>List files</p>
 <pre class="bash"><code>ls</code></pre>
 <pre><code>## Lesson9_Intro2Linux.Rproj
+## README.md
 ## Slides.Rmd
 ## Slides.html
+## backup
 ## data
 ## figures
 ## index.Rmd
 ## index.html</code></pre>
 <pre class="bash"><code>ls -lht</code></pre>
-<pre><code>## total 1864
-## -rw-r--r--  1 verbe039  staff   4.1K Jan 12 22:38 index.Rmd
-## drwxr-xr-x  6 verbe039  staff   204B Jan 12 22:37 data
-## -rw-r--r--  1 verbe039  staff   747K Jan 12 22:37 index.html
+<pre><code>## total 1880
+## -rw-r--r--  1 verbe039  staff   4.3K Jan 12 23:09 index.Rmd
+## drwxr-xr-x  7 verbe039  staff   238B Jan 12 23:09 data
+## -rw-r--r--  1 verbe039  staff   749K Jan 12 23:09 index.html
+## -rw-r--r--  1 verbe039  staff    69B Jan 12 23:05 README.md
+## drwxr-xr-x  3 verbe039  staff   102B Jan 12 22:40 backup
 ## drwxr-xr-x  3 verbe039  staff   102B Jan 12 21:42 figures
 ## -rw-r--r--  1 verbe039  staff   115B Jan 12 12:33 Slides.Rmd
 ## -rw-r--r--  1 verbe039  staff   166K Jan 12 12:33 Slides.html
@@ -155,8 +161,11 @@ pwd</code></pre>
 <div id="cp" class="section level3">
 <h3><span class="header-section-number">3.2.2</span> cp</h3>
 </div>
+<div id="writing-a-shell-script" class="section level3">
+<h3><span class="header-section-number">3.2.3</span> writing a shell script?!</h3>
+</div>
 <div id="gdal" class="section level3">
-<h3><span class="header-section-number">3.2.3</span> GDAL</h3>
+<h3><span class="header-section-number">3.2.4</span> GDAL</h3>
 <p><strong><em>Do you know who Frank Warmerdam is?</em></strong></p>
 <ul>
 <li>Check the the FWtools:
@@ -193,6 +202,7 @@ rm input.tif</code></pre>
 ## gewata.zip
 ## input.tif
 ## ndvi.tif
+## ndvi.tif.aux.xml
 ## * now apply gdal_calc: Command line raster calculator with numpy syntax
 ## 0 .. 10 .. 20 .. 30 .. 40 .. 50 .. 60 .. 70 .. 80 .. 90 .. 100 - Done
 ## * remove the input temporary file</code></pre>
@@ -201,55 +211,11 @@ echo &quot;* list all files&quot;
 ls -lht
 echo &quot;* histogram statistics&quot;
 gdalinfo -hist -stats ndvi.tif</code></pre>
-<pre><code>## * list all files
-## total 8432
-## -rw-r--r--  1 verbe039  staff   945K Jan 12 22:38 ndvi.tif
-## -rw-r-----@ 1 verbe039  staff   1.6M Jan 12 21:57 gewata.zip
-## -rwxr-xr-x@ 1 verbe039  staff   1.6M Jan  8 10:41 LE71700552001036SGS00_SR_Gewata_INT1U.tif
-## * histogram statistics
-## Driver: GTiff/GeoTIFF
-## Files: ndvi.tif
-## Size is 653, 593
-## Coordinate System is:
-## PROJCS[&quot;UTM Zone 36, Northern Hemisphere&quot;,
-##     GEOGCS[&quot;WGS 84&quot;,
-##         DATUM[&quot;unknown&quot;,
-##             SPHEROID[&quot;WGS84&quot;,6378137,298.257223563]],
-##         PRIMEM[&quot;Greenwich&quot;,0],
-##         UNIT[&quot;degree&quot;,0.0174532925199433]],
-##     PROJECTION[&quot;Transverse_Mercator&quot;],
-##     PARAMETER[&quot;latitude_of_origin&quot;,0],
-##     PARAMETER[&quot;central_meridian&quot;,33],
-##     PARAMETER[&quot;scale_factor&quot;,0.9996],
-##     PARAMETER[&quot;false_easting&quot;,500000],
-##     PARAMETER[&quot;false_northing&quot;,0],
-##     UNIT[&quot;metre&quot;,1,
-##         AUTHORITY[&quot;EPSG&quot;,&quot;9001&quot;]]]
-## Origin = (829455.000000000000000,843195.000000000000000)
-## Pixel Size = (30.000000000000000,-30.000000000000000)
-## Metadata:
-##   AREA_OR_POINT=Area
-## Image Structure Metadata:
-##   COMPRESSION=LZW
-##   INTERLEAVE=BAND
-## Corner Coordinates:
-## Upper Left  (  829455.000,  843195.000) ( 35d59' 8.17&quot;E,  7d37' 4.43&quot;N)
-## Lower Left  (  829455.000,  825405.000) ( 35d59' 4.21&quot;E,  7d27'25.90&quot;N)
-## Upper Right (  849045.000,  843195.000) ( 36d 9'46.63&quot;E,  7d36'59.90&quot;N)
-## Lower Right (  849045.000,  825405.000) ( 36d 9'42.43&quot;E,  7d27'21.46&quot;N)
-## Center      (  839250.000,  834300.000) ( 36d 4'25.36&quot;E,  7d32'12.96&quot;N)
-## Band 1 Block=653x3 Type=Float32, ColorInterp=Gray
-##   Minimum=0.157, Maximum=0.908, Mean=0.687, StdDev=0.136
-## 0...10...20...30...40...50...60...70...80...90...100 - done.
-##   256 buckets from 0.155153 to 0.909519:
-##   1 0 0 1 1 0 1 0 1 1 1 1 1 0 1 2 1 3 4 2 1 4 3 3 6 2 4 4 9 7 22 2 24 27 25 44 32 44 67 83 48 75 87 103 85 165 98 254 119 240 198 240 190 448 244 196 526 439 93 0 1257 0 119 726 544 290 390 731 514 470 604 667 545 584 566 612 607 935 508 706 520 698 708 1008 856 934 508 718 991 1034 608 1184 1302 291 862 1159 747 1043 1120 1199 1152 641 964 1333 765 1456 758 1251 1249 886 1207 1242 1614 235 2755 91 0 2782 69 2797 338 1735 1421 927 1380 1386 730 1735 1485 935 2231 893 1626 1546 1553 1485 1332 1080 948 1646 1013 1618 1152 1332 1283 1337 1046 1427 1206 1291 2310 0 1524 739 1605 1006 1759 1098 1445 786 1236 1570 1144 1097 1663 1303 1523 1022 979 1392 1737 1375 962 2372 267 2042 1855 1324 2093 1304 2278 1603 1837 2642 2452 1970 3262 1904 3528 4184 714 3980 3820 3482 5394 3008 5714 3932 4236 4385 6381 7122 532 7350 6907 5746 7439 4203 6629 5423 6466 7130 7818 7825 6345 6809 5419 8614 6644 5778 3907 5711 5766 4920 3944 6694 3637 3323 3378 2658 3948 2383 2020 2003 914 686 1076 808 820 473 388 213 218 94 126 62 43 28 19 7 9 2 1 0 0 1 
-##   NoData Value=1.175494351e-38
-##   Metadata:
-##     STATISTICS_MAXIMUM=0.90804594755173
-##     STATISTICS_MEAN=0.68650394638861
-##     STATISTICS_MINIMUM=0.15662650763988
-##     STATISTICS_STDDEV=0.13569862342957</code></pre>
-<p>More info here: <a href="http://www.gdal.org/gdalinfo.html" class="uri">http://www.gdal.org/gdalinfo.html</a></p>
+<p>More info here on the power of GDAL via the terminal: <a href="http://www.gdal.org/" class="uri">http://www.gdal.org/</a></p>
+</div>
+<div id="excercise" class="section level3">
+<h3><span class="header-section-number">3.2.5</span> Excercise</h3>
+<p>Try to write a shell script that looks at the difference between the two file provided by Loic.</p>
 <p>See the following tutorial for Geeks! (Warning!: Now you are risking to become a Geek or even computer freak yourself)</p>
 <ul>
 <li><a href="http://www.howtogeek.com/140679/beginner-geek-how-to-start-using-the-linux-terminal/" class="uri">http://www.howtogeek.com/140679/beginner-geek-how-to-start-using-the-linux-terminal/</a></li>
